chore: Speed up connections to APIs
Use preconnect and dns-prefetch to let the browser know they can do some
of the work beforehand, as we will likely be connecting to these
domains.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/png" href="/who.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!--
+            Speed up connections to APIs
+            https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel/preconnect
+            https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel/dns-prefetch
+        -->
+        <link
+            rel="preconnect"
+            href="https://flashlight-cr-184945651621.northamerica-northeast2.run.app"
+        />
+        <link rel="dns-prefetch" href="https://api.minetools.eu" />
+        <link rel="dns-prefetch" href="https://crafatar.com" />
         <title>Prism Overlay</title>
     </head>
     <body style="width: 100vw; height: 100vh">
