chore: Point to new production domain
Stop pointing directly to cloud run instance. There seems to be a bit of
overhead when doing it this way, but that will have to be fine for now.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
             https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel/preconnect
             https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel/dns-prefetch
         -->
-        <link
-            rel="preconnect"
-            href="https://flashlight-cr-184945651621.northamerica-northeast2.run.app"
-        />
+        <link rel="preconnect" href="https://flashlight.prismoverlay.com" />
         <link rel="dns-prefetch" href="https://api.minetools.eu" />
         <link rel="dns-prefetch" href="https://crafatar.com" />
         <title>Prism Overlay</title>
