fix: Switch skin render provider to mineatar
Crafatar has been down for a good while now. This seems like a great
alternative :^)

Thank you so much to mineatar <3
https://mineatar.io/

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Attributes/rel/dns-prefetch
         -->
         <link rel="preconnect" href="https://flashlight.prismoverlay.com" />
-        <link rel="dns-prefetch" href="https://crafatar.com" />
+        <link rel="dns-prefetch" href="https://api.mineatar.io" />
         <title>Prism Overlay</title>
     </head>
     <body style="width: 100vw; height: 100vh">
